--- a/backend_dart/pubspec.yaml
+++ b/backend_dart/pubspec.yaml
@@ -1,14 +1,23 @@
-name: spss_dart_backend
-description: Backend em Dart Shelf para o São Paulo Stock Sync
-version: 0.1.0
+name: backend_dart
+description: Backend Dart do projeto São Paulo Stock Sync - Metro SP 2025
+publish_to: "none"
+
+version: 1.0.0
+
 environment:
-  sdk: ">=3.4.0 <4.0.0"
+  sdk: ">=3.3.0 <4.0.0"
 
 dependencies:
-  shelf: ^1.4.1
-  shelf_router: ^1.1.4
-  shelf_cors_headers: ^0.1.5
-  shelf_static: ^1.1.2
+  # -------------------------------
+  # 🧠 Servidor HTTP e roteamento
+  # -------------------------------
+  shelf: ^1.4.1                  # Framework HTTP leve
+  shelf_router: ^1.1.4           # Roteamento REST
+  shelf_cors_headers: ^0.1.5     # Middleware de CORS
+  shelf_static: ^1.1.2           # Para servir arquivos estáticos (opcional)
+  http_parser: ^4.0.2            # Utilitário para headers HTTP
+  path: ^1.9.0                   # Manipulação de caminhos
 
 dev_dependencies:
-  lints: ^4.0.0
+  lints: ^3.0.0
+  test: ^1.25.2
