--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -2,8 +2,10 @@ name: spss_flutter
 description: São Paulo Stock Sync - Flutter refactor
 publish_to: "none"
 version: 0.1.0+1
+
 environment:
   sdk: ">=3.4.0 <4.0.0"
+
 dependencies:
   flutter:
     sdk: flutter
@@ -11,10 +13,14 @@ dependencies:
   go_router: ^14.2.0
   http: ^1.2.2
   shared_preferences: ^2.2.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^5.4.4
+  build_runner: ^2.4.8
   flutter_lints: ^4.0.0
+
 flutter:
   uses-material-design: true
   assets:
